# BOOZA_SHOP

./: .env.example  .gitignore  Makefile  README.md  README_dev.md  RMS_BD.drawio  alembic.ini  check_analytics.py  docker-compose.yml  main.py  pyproject.toml  result.txt
alembic/: env.py
alembic/versions/: 00bf0b58d49d_added_create_datetime_in_database.py  40f18554bb8a_add_phone_column_to_orders_table.py  5087af87cc44_initial_models.py  52f3ff180f2a_update_order_status_enum.py  fdbd618928db_initial_schema.py
backend/: .dockerignore  .env.test  Dockerfile  docker-compose.test.yml  main.py  pyproject.toml  requirements.txt
backend/api/endpoints/: analytics.py  auth.py  food_type.py  menu.py  order.py  staff.py  (+1 more)
backend/core/: config.py  security.py
backend/crud/: analytics.py  food_type.py  menu.py  order_items.py  orders.py  staff.py  users.py
backend/models/: database.py  init_db.py  setting_up_db.py
backend/schemas/: analytics.py  auth.py  food_type.py  menu.py  order.py  staff.py  users.py
backend/scripts/: generate_placeholders.py  seed_db.py
backend/test/: test_food_type.py  test_menu.py  test_staff.py  test_user.py
backend/tests/: conftest.py  test_models.py  test_security.py
backend/utils/: security.py
rms_front/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
rms_front/coverage/: clover.xml  coverage-final.json  index.html
rms_front/src/: App.tsx  index.css  main.tsx
rms_front/tests/: AddProductModal.test.tsx  Cart.test.tsx  CheckoutModal.test.tsx  ProductCard.test.tsx
scripts/: init.sh
(+79 files in other folders)
